@@ -29,6 +29,7 @@ import org.jkiss.dbeaver.model.DBPImage;
 import org.jkiss.dbeaver.model.DBUtils;
 import org.jkiss.dbeaver.model.app.DBPPlatform;
 import org.jkiss.dbeaver.model.app.DBPProject;
+import org.jkiss.dbeaver.model.app.DBPWorkspace;
 import org.jkiss.dbeaver.model.auth.SMSessionContext;
 import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
 import org.jkiss.dbeaver.model.struct.DBSEntity;
@@ -49,7 +50,7 @@ import java.util.stream.Collectors;
  * DBNModel.
  * Contains all objects which are shown in navigator tree.
  * Also ties DBSObjects to thee model (DBNNode).
- *
+ * *
  * It's strongly recommended to not put the same DBSObject in tree model multiple times.
  * It will work but some actions will not work well
  * (e.g. TreeViewer sometimes update only first TreeItem corresponding to model certain model object).
@@ -62,55 +63,49 @@ public class DBNModel {
     public static final String FAKE_RESOURCE_ROOT_NODE = "resources";
     private static final Log log = Log.getLog(DBNModel.class);
 
-    public static class NodePath {
-        DBNNode.NodePathType type;
-        List<String> pathItems;
-        final boolean legacyFormat;
-
-        NodePath(DBNNode.NodePathType type, List<String> pathItems) {
-            this.type = type;
-            this.pathItems = pathItems;
-            this.legacyFormat = type != DBNNode.NodePathType.node;
-        }
-
-        public String first() {
-            return pathItems.isEmpty() ? null : pathItems.get(0);
-        }
-
+    private record NodePath(@NotNull List<String> pathItems) {
+        @NotNull
         @Override
         public String toString() {
-            return type.getPrefix() + pathItems.toString();
+            return DBNNode.NODE_URI_PREFIX + pathItems;
         }
     }
 
     private final DBPPlatform platform;
-    private final List<? extends DBPProject> modelProjects;
+    private final DBPWorkspace modelWorkspace;
     private DBNRoot root;
     private final List<INavigatorListener> listeners = new ArrayList<>();
     private transient INavigatorListener[] listenersCopy = null;
     private final transient List<DBNEvent> eventCache = new ArrayList<>();
     private final Map<DBSObject, Object> nodeMap = new HashMap<>();
     private final List<Function<DBNNode, Boolean>> nodeFilters = new ArrayList<>();
+    private EventProcessingJob eventProcessingJob;
 
     private SMSessionContext modelAuthContext;
 
     /**
      * Creates navigator model.
      *
-     * @param modelProjects Model projects. If null then this is global navigator model. Otherwise it points to a session-like object.
+     * @param workspace Model workspace. If null then this is global navigator model. Otherwise it points to a session-like object.
      */
-    public DBNModel(DBPPlatform platform, @Nullable List<? extends DBPProject> modelProjects) {
+    public DBNModel(@NotNull DBPPlatform platform, @Nullable DBPWorkspace workspace) {
         this.platform = platform;
-        this.modelProjects = modelProjects;
+        this.modelWorkspace = workspace;
     }
 
+    @NotNull
     public DBPPlatform getPlatform() {
         return platform;
     }
 
     @Nullable
+    public DBPWorkspace getModelWorkspace() {
+        return modelWorkspace;
+    }
+
+    @Nullable
     public List<? extends DBPProject> getModelProjects() {
-        return modelProjects;
+        return modelWorkspace == null ? null : modelWorkspace.getProjects();
     }
 
     public SMSessionContext getModelAuthContext() {
@@ -122,23 +117,25 @@ public class DBNModel {
     }
 
     public boolean isGlobal() {
-        return modelProjects == null;
+        return modelWorkspace == null;
     }
 
-    public void initialize()
-    {
+    public void initialize() {
         if (this.root != null) {
             throw new IllegalStateException("Can't initialize navigator model more than once");
         }
         this.root = new DBNRoot(this);
 
         if (isGlobal()) {
-            new EventProcessingJob().schedule();
+          this.eventProcessingJob =  new EventProcessingJob();
+          this.eventProcessingJob.schedule();
         }
     }
 
     public void dispose() {
-
+        if (this.eventProcessingJob != null) {
+            this.eventProcessingJob.cancel();
+        }
         if (root != null) {
             this.root.dispose(false);
             synchronized (nodeMap) {
@@ -157,8 +154,8 @@ public class DBNModel {
         }
     }
 
-    public DBNRoot getRoot()
-    {
+    @NotNull
+    public DBNRoot getRoot() {
         return root;
     }
 
@@ -167,20 +164,18 @@ public class DBNModel {
     }
 
     @Nullable
-    public DBNDatabaseNode findNode(DBSObject object)
-    {
-        if (object instanceof DBNDatabaseNode) {
-            return (DBNDatabaseNode)object;
+    public DBNDatabaseNode findNode(@NotNull DBSObject object) {
+        if (object instanceof DBNDatabaseNode dbNode) {
+            return dbNode;
         } else {
             return this.getNodeByObject(object);
         }
     }
 
     @Nullable
-    public DBNDatabaseNode getNodeByObject(DBSObject object)
-    {
-        if (object instanceof DBNDatabaseNode) {
-            return (DBNDatabaseNode)object;
+    public DBNDatabaseNode getNodeByObject(@NotNull DBSObject object) {
+        if (object instanceof DBNDatabaseNode dbNode) {
+            return dbNode;
         }
         object = DBUtils.getPublicObjectContainer(object);
 
@@ -190,8 +185,8 @@ public class DBNModel {
         }
         if (obj == null) {
             return null;
-        } else if (obj instanceof DBNDatabaseNode) {
-            return (DBNDatabaseNode)obj;
+        } else if (obj instanceof DBNDatabaseNode dbNode) {
+            return dbNode;
         } else if (obj instanceof List) {
             @SuppressWarnings("unchecked")
             List<DBNDatabaseNode> nodeList = (List<DBNDatabaseNode>) obj;
@@ -206,25 +201,18 @@ public class DBNModel {
                 }
             }
             // Get just first one
-            return nodeList.get(0);
+            return nodeList.getFirst();
         } else {
             // Never be here
             throw new IllegalStateException();
         }
-/*
-        if (node == null) {
-            log.warn("Can't find tree node for object " + object.getName() + " (" + object.getClass().getName() + ")");
-        }
-        return node;
-*/
     }
 
     @Nullable
-    public DBNDatabaseNode getNodeByObject(DBRProgressMonitor monitor, DBSObject object, boolean addFiltered)
-    {
-        if (object instanceof DBSEntity) {
+    public DBNDatabaseNode getNodeByObject(@NotNull DBRProgressMonitor monitor, @Nullable DBSObject object, boolean addFiltered) {
+        if (object instanceof DBSEntity entity) {
             try {
-                object = DBVUtils.getRealEntity(monitor, (DBSEntity)object);
+                object = DBVUtils.getRealEntity(monitor, entity);
             } catch (DBException e) {
                 log.debug("Error dereferencing virtual entity", e);
             }
@@ -256,18 +244,14 @@ public class DBNModel {
 
     @NotNull
     private static NodePath getNodePath(@NotNull String path) {
-        DBNNode.NodePathType nodeType = DBNNode.NodePathType.other;
-        for (DBNNode.NodePathType type : DBNNode.NodePathType.values()) {
-            final String prefix = type.getPrefix();
-            if (path.startsWith(prefix)) {
-                path = path.substring(prefix.length());
-                nodeType = type;
-                break;
-            }
+        String prefix = DBNNode.NODE_URI_PREFIX;
+        if (path.startsWith(prefix)) {
+            path = path.substring(prefix.length());
         }
+
         final List<String> items = CommonUtils.splitString(path, '/');
         items.replaceAll(DBNUtils::decodeNodePath);
-        return new NodePath(nodeType, items);
+        return new NodePath(items);
     }
 
     @Nullable
@@ -277,9 +261,6 @@ public class DBNModel {
             return null;
         }
         NodePath nodePath = getNodePath(path);
-        if (nodePath.legacyFormat) {
-            return projectNode.getDatabases().getDataSource(nodePath.first());
-        }
         DBNProjectDatabases databaseRootNode = projectNode.getDatabases();
         int rootDbNodeIndex = nodePath.pathItems.indexOf(databaseRootNode.getNodeId());
         if (rootDbNodeIndex < 0) {
@@ -305,9 +286,6 @@ public class DBNModel {
     @Nullable
     public DBNNode getNodeByPath(@NotNull DBRProgressMonitor monitor, @NotNull String path) throws DBException {
         final NodePath nodePath = getNodePath(path);
-        if (nodePath.legacyFormat) {
-            return DBNLegacyUtils.legacyGetNodeByPath(monitor, this, nodePath);
-        }
         return findNodeByPath(monitor, getRoot(), nodePath, 0);
     }
 
@@ -326,12 +304,9 @@ public class DBNModel {
             return null;
         }
         NodePath path = getNodePath(relativePath);
-        if (path.type == DBNNode.NodePathType.other) {
-            return projectNode.getNodeUri() + '/' + path.pathItems.stream()
-                .map(DBNUtils::encodeNodePath)
-                .collect(Collectors.joining("/"));
-        }
-        return null;
+        return projectNode.getNodeUri() + '/' + path.pathItems.stream()
+            .map(DBNUtils::encodeNodePath)
+            .collect(Collectors.joining("/"));
     }
 
     @Nullable
@@ -347,9 +322,6 @@ public class DBNModel {
         }
         NodePath nodePath = getNodePath(path);
        
-        if (nodePath.legacyFormat) {
-            return DBNLegacyUtils.legacyGetNodeByPath(monitor, projectNode, nodePath);
-        }
         String projectNodePath = projectNode.getNodeUri();
         if (!path.startsWith(projectNodePath)) {
             throw new DBException("Node from another project");
@@ -358,6 +330,7 @@ public class DBNModel {
         return findNodeByPath(monitor, projectNode, nodePath, nodeLevel);
     }
 
+    @Nullable
     private DBNNode findNodeByPath(
         @NotNull DBRProgressMonitor monitor,
         @NotNull DBNNode currentNode,
@@ -378,15 +351,14 @@ public class DBNModel {
             expectedNodePathName = nodePath.pathItems.get(currentLevel);
         }
         DBNNode[] children = currentNode.getChildren(monitor);
-        if (children == null) {
-            return null;
-        }
 
         DBNNode detectedNode = null;
-        for (DBNNode child : children) {
-            if (child.getNodeId().equals(expectedNodePathName)) {
-                detectedNode = child;
-                break;
+        if (children != null) {
+            for (DBNNode child : children) {
+                if (child.getNodeId().equals(expectedNodePathName)) {
+                    detectedNode = child;
+                    break;
+                }
             }
         }
 
@@ -397,6 +369,10 @@ public class DBNModel {
         }
         if (detectedNode instanceof DBNNodeExtension nodeExtension) {
             detectedNode = nodeExtension.resolveRealNode();
+            if (detectedNode == null) {
+                log.error("Error resolving extension node for " + nodeExtension);
+                return null;
+            }
         }
 
         if (currentLevel == nodePath.pathItems.size() - 1) {
@@ -407,14 +383,18 @@ public class DBNModel {
     }
 
 
-    private boolean cacheNodeChildren(DBRProgressMonitor monitor, DBNDatabaseNode node, DBSObject objectToCache, boolean addFiltered) throws DBException
-    {
+    private boolean cacheNodeChildren(
+        @NotNull DBRProgressMonitor monitor,
+        @NotNull DBNDatabaseNode node,
+        @NotNull DBSObject objectToCache,
+        boolean addFiltered
+    ) throws DBException {
         DBNDatabaseNode[] children = node.getChildren(monitor);
         boolean cached = false;
         if (!ArrayUtils.isEmpty(children)) {
             for (DBNDatabaseNode child : children) {
-                if (child instanceof DBNDatabaseFolder) {
-                    Class<?> itemsClass = ((DBNDatabaseFolder) child).getChildrenClass();
+                if (child instanceof DBNDatabaseFolder folder) {
+                    Class<?> itemsClass = folder.getChildrenClass();
                     if (itemsClass != null && itemsClass.isAssignableFrom(objectToCache.getClass())) {
                         cached = cacheNodeChildren(monitor, child, objectToCache, addFiltered);
                         if (cached) {
@@ -437,12 +417,11 @@ public class DBNModel {
     }
 
     @Nullable
-    public DBNDatabaseNode getParentNode(DBSObject object)
-    {
+    public DBNDatabaseNode getParentNode(@NotNull DBSObject object) {
         DBNDatabaseNode node = getNodeByObject(object);
         if (node != null) {
-            if (node.getParentNode() instanceof DBNDatabaseNode) {
-                return (DBNDatabaseNode) node.getParentNode();
+            if (node.getParentNode() instanceof DBNDatabaseNode dbNode) {
+                return dbNode;
             } else {
                 log.error("Object's " + object.getName() + "' parent node is not a database node: " + node.getParentNode());
                 return null;
@@ -457,8 +436,7 @@ public class DBNModel {
                 parentObject = part.getParentTable();
             }
         }
-        for (int i = 0; i < path.length; i++) {
-            DBSObject item = path[i];
+        for (DBSObject item : path) {
             node = getNodeByObject(item);
             if (node == null) {
                 // Parent node read
@@ -473,8 +451,8 @@ public class DBNModel {
             if (item == DBUtils.getPublicObjectContainer(parentObject)) {
                 // Try to find parent node withing children
                 for (DBNDatabaseNode child : children) {
-                    if (child instanceof DBNDatabaseFolder) {
-                        Class<?> itemsClass = ((DBNDatabaseFolder) child).getChildrenClass();
+                    if (child instanceof DBNDatabaseFolder folder) {
+                        Class<?> itemsClass = folder.getChildrenClass();
                         if (itemsClass != null && itemsClass.isAssignableFrom(object.getClass())) {
                             return child;
                         }
@@ -488,25 +466,19 @@ public class DBNModel {
         return null;
     }
 
-    void addNode(DBNDatabaseNode node)
-    {
-        addNode(node, false);
-    }
-
-    void addNode(DBNDatabaseNode node, boolean reflect)
-    {
+    void addNode(@NotNull DBNDatabaseNode node, boolean reflect) {
         synchronized (nodeMap) {
             Object obj = nodeMap.get(node.getObject());
             if (obj == null) {
                 // New node
                 nodeMap.put(node.getObject(), node);
-            } else if (obj instanceof DBNNode) {
+            } else if (obj instanceof DBNNode no) {
                 // Second node - make a list
                 List<DBNNode> nodeList = new ArrayList<>(2);
-                nodeList.add((DBNNode)obj);
+                nodeList.add(no);
                 nodeList.add(node);
                 nodeMap.put(node.getObject(), nodeList);
-            } else if (obj instanceof List) {
+            } else if (obj instanceof List<?>) {
                 // Multiple nodes
                 @SuppressWarnings("unchecked")
                 List<DBNNode> nodeList = (List<DBNNode>) obj;
@@ -518,8 +490,7 @@ public class DBNModel {
         }
     }
 
-    void removeNode(DBNDatabaseNode node, boolean reflect)
-    {
+    void removeNode(@NotNull DBNDatabaseNode node, boolean reflect) {
         boolean badNode = false;
         synchronized (nodeMap) {
             Object obj = nodeMap.get(node.getObject());
@@ -531,7 +502,7 @@ public class DBNModel {
                 if (nodeMap.remove(node.getObject()) != node) {
                     badNode = true;
                 }
-            } else if (obj instanceof List) {
+            } else if (obj instanceof List<?>) {
                 // Multiple nodes
                 @SuppressWarnings("unchecked")
                 List<DBNNode> nodeList = (List<DBNNode>) obj;
@@ -552,8 +523,7 @@ public class DBNModel {
         }
     }
 
-    public void addListener(INavigatorListener listener)
-    {
+    public void addListener(@NotNull INavigatorListener listener) {
         synchronized (this.listeners) {
             if (this.listeners.contains(listener)) {
                 log.warn("Listener " + listener + " already registered in model");
@@ -564,8 +534,7 @@ public class DBNModel {
         }
     }
 
-    public void removeListener(INavigatorListener listener)
-    {
+    public void removeListener(@NotNull INavigatorListener listener) {
         synchronized (this.listeners) {
             if (!this.listeners.remove(listener)) {
                 log.warn("Listener " + listener + " wasn't registered in model");
@@ -574,13 +543,11 @@ public class DBNModel {
         }
     }
 
-    public void fireNodeUpdate(Object source, DBNNode node, DBNEvent.NodeChange nodeChange)
-    {
+    public void fireNodeUpdate(@NotNull Object source, @NotNull DBNNode node, @NotNull DBNEvent.NodeChange nodeChange) {
         this.fireNodeEvent(new DBNEvent(source, DBNEvent.Action.UPDATE, nodeChange, node));
     }
 
-    public void fireNodeEvent(final DBNEvent event)
-    {
+    public void fireNodeEvent(@NotNull DBNEvent event) {
         if (!isGlobal() || platform.isShuttingDown()) {
             return;
         }
@@ -589,8 +556,8 @@ public class DBNModel {
         }
     }
 
-    public static synchronized DBPImage getStateOverlayImage(DBPImage image, DBSObjectState state)
-    {
+    @NotNull
+    public static synchronized DBPImage getStateOverlayImage(@NotNull DBPImage image, @Nullable DBSObjectState state) {
         if (state == null) {
             // Empty state
             return image;
@@ -600,15 +567,14 @@ public class DBNModel {
             // No overlay
             return image;
         }
-        if (image instanceof DBIconComposite) {
-            ((DBIconComposite) image).setBottomRight(overlayImage);
+        if (image instanceof DBIconComposite ic) {
+            ic.setBottomRight(overlayImage);
             return image;
         }
         return new DBIconComposite(image, false, null, null, null, overlayImage);
     }
 
-    public static void updateConfigAndRefreshDatabases(DBNNode node)
-    {
+    public static void updateConfigAndRefreshDatabases(@NotNull DBNNode node) {
         for (DBNNode parentNode = node; parentNode != null; parentNode = parentNode.getParentNode()) {
             if (parentNode instanceof DBNProjectDatabases projectDatabases) {
                 projectDatabases.getDataSourceRegistry().flushConfig();
@@ -618,18 +584,18 @@ public class DBNModel {
         }
     }
 
-    public void ensureProjectLoaded(DBPProject project) {
+    public void ensureProjectLoaded(@NotNull DBPProject project) {
         DBNProject projectNode = root == null ? null : root.getProjectNode(project);
         if (projectNode != null) {
             projectNode.getDatabases();
         }
     }
 
-    public void addFilter(Function<DBNNode, Boolean> filter) {
+    public void addFilter(@NotNull Function<DBNNode, Boolean> filter) {
         nodeFilters.add(filter);
     }
 
-    boolean isNodeVisible(DBNNode node) {
+    boolean isNodeVisible(@NotNull DBNNode node) {
         if (!nodeFilters.isEmpty()) {
             for (Function<DBNNode, Boolean> f : nodeFilters) {
                 if (!f.apply(node)) {
@@ -670,9 +636,9 @@ public class DBNModel {
 
                 try {
                     DBWorkbench.getPlatformUI().executeInMainThread(() -> {
-                        for (int i = 0; i < realEvents.length; i++) {
+                        for (DBNEvent realEvent : realEvents) {
                             for (INavigatorListener listener : listenersCopy) {
-                                listener.nodeChanged(realEvents[i]);
+                                listener.nodeChanged(realEvent);
                             }
                         }
                     });
